--- a/Rust.html
+++ b/Rust.html
@@ -4,10 +4,11 @@
     <head>
         <title><h1>Game Hub</h1></title>
         <meta name="description" content="This is a gaming website">
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="styles/stylesheet.css">
 
     </head>  
-    <body>
+<body>
     <header>
         <img style="float: left; border: 1.5px solid black; "src="images/Rust.jpg" height="" width="15%" alt="Rust Logo">
         <h1><a href="homepage.html" style="text-decoration: none; color: white;">Game Hub</a></h1>
