--- a/homepage.html
+++ b/homepage.html
@@ -4,6 +4,7 @@
     <head>
         <title><h1>Game Hub</h1></title>
         <meta name="description" content="This is gaming website">
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="styles/stylesheet.css">
 
     </head>  
