--- a/Call Of Duty.html
+++ b/Call Of Duty.html
@@ -6,12 +6,18 @@
         <meta name="description" content="This is a gaming website">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles/stylesheet.css">
-
+        <style>
+            p{
+            font-family: sans-serif;
+            font-size: 1.2em;
+            color: white;
+            }
+        </style>
     </head>  
     <body>
     <header>
         <img style="float: left; border: 1.5px solid black; "src="images/Rust.jpg" height="" width="15%" alt="Rust Logo">
-        <h1><a href="homepage.html" style="text-decoration: none; color: white;">Game Hub</a></h1>
+        <h1><a href="index.html" style="text-decoration: none; color: white;">Game Hub</a></h1>
 
     </header>
     <nav>        
@@ -51,7 +57,9 @@
             There are almost endless combinations of cosmetics within the game, ranging from weapon charms, optics, to even different coloured guns.
             Let your creativity show on the battlefield.
         </p>
-
+        <p style="margin-left: 1%;">
+            Call of Duty games vary in price, please see the tab on the right hand side of your screen to check out the pricing of different games.
+        </p>
      </main>
      <aside>
        
@@ -70,7 +78,7 @@
         </section>
         <section class="gamesTab">
         
-            <ul>
+            <ol>
                 <p style="margin-left: -11%;">
                     Game Websites
                 </p>
@@ -78,14 +86,14 @@
                 <li><a href="https://www.callofduty.com/"style="text-decoration: none; color: white;">Call Of Duty</a></li>
                 <li><a href="https://blog.counter-strike.net/"style="text-decoration: none; color: white;">CS:GO</a></li>
                 <li><a href="https://palworld.co/"style="text-decoration: none; color: white;">Palworld</a></li>
-            </ul>
+            </ol>
         </section>
      </aside>
 
     </body>
     <footer>
         <h3 >
-            &copy; Copyright, GameHub
+            &copy; Copyright, GameHub 2024 
         </h3>
         <p>
             Contact Us: 083 234 1659
