--- a/Rust.html
+++ b/Rust.html
@@ -6,12 +6,18 @@
         <meta name="description" content="This is a gaming website">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles/stylesheet.css">
-
+        <style>
+            p{
+            font-family: sans-serif;
+            font-size: 1.2em;
+            color: white;
+            }
+        </style>
     </head>  
 <body>
     <header>
         <img style="float: left; border: 1.5px solid black; "src="images/Rust.jpg" height="" width="15%" alt="Rust Logo">
-        <h1><a href="homepage.html" style="text-decoration: none; color: white;">Game Hub</a></h1>
+        <h1><a href="index.html" style="text-decoration: none; color: white;">Game Hub</a></h1>
 
     </header>
     <nav>        
@@ -45,7 +51,11 @@
             You can use the emote wheel in game to portray your intentions to players in-game or even to use these emotes to deceive them.
         </p>
         <p>
-            You can choose to be a builder where you can build new base designs till your hearts 
+            You can choose to be a builder where you can build new base designs till your hearts content.
+
+        </p>
+        <p>
+            Rust is currently €40 on the steam market.
         </p>
      </main>
      <aside>
@@ -65,7 +75,7 @@
         </section>
         <section class="gamesTab">
         
-            <ul>
+            <ol>
                 <p style="margin-left: -11%;">
                     Game Websites
                 </p>
@@ -73,14 +83,14 @@
                 <li><a href="https://www.callofduty.com/"style="text-decoration: none; color: white;">Call Of Duty</a></li>
                 <li><a href="https://blog.counter-strike.net/"style="text-decoration: none; color: white;">CS:GO</a></li>
                 <li><a href="https://palworld.co/"style="text-decoration: none; color: white;">Palworld</a></li>
-            </ul>
+            </ol>
         </section>
      </aside>
 
     </body>
     <footer>
         <h3 >
-            &copy; Copyright, GameHub
+            &copy; Copyright, GameHub 2024
         </h3>
         <p>
             Contact Us: 083 234 1659
