--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <head>
         <title><h1>Game Hub</h1></title>
         <meta name="description" content="This is gaming website">
+        <meta name="name" content="Bill Gates">
+        <meta name="keywords" content="Gaming, Steam, Rust, CSGO, Palworld, COD">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles/stylesheet.css">
+        <style>
+            p{
+            font-family: sans-serif;
+            font-size: 1.2em;
+            color: white;
+            }
+        </style>
 
     </head>  
     <body>
@@ -67,7 +76,7 @@
 
         <section class="gamesTab">
         
-            <ul>
+            <ol>
                 <p style="margin-left: -11%;">
                     Game Websites
                 </p>
@@ -75,13 +84,13 @@
                 <li><a href="https://www.callofduty.com/"style="text-decoration: none; color: white;">Call Of Duty</a></li>
                 <li><a href="https://blog.counter-strike.net/"style="text-decoration: none; color: white;">CS:GO</a></li>
                 <li><a href="https://palworld.co/"style="text-decoration: none; color: white;">Palworld</a></li>
-            </ul>
+            </ol>
         </section>
      </aside>
     </body>
     <footer>
         <h3 >
-            &copy; Copyright, GameHub
+            &copy; Copyright, GameHub 2024
         </h3>
         <p>
             Contact Us: 083 234 1659
